Uploaded Cropped images of players and goalkeepers used in analisys. Changed default color clustering green_threshold. Added Detailed Method descriptions and Type Annotations. Explained the use of this project step-by-step in main.py.

--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,7 @@ config.py
 analysis/data/keypoints
 old-object_tracker.py
 test.avi
-player_*.*
-goalkeeper_*.*
 test.mp4
 video2.mp4
+video.mp4
 *_tracks.json
