--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-inference_gpu==0.18.1
-numpy==2.1.1
+numpy==2.1.2
+opencv_contrib_python==4.10.0.84
 opencv_python==4.10.0.84
 pandas==2.2.3
 scikit_learn==1.5.2
 scipy==1.14.1
-supervision==0.23.0
+supervision==0.24.0
 torch==2.4.1+cu118
-ultralytics==8.2.59
+ultralytics==8.3.5
+roboflow==1.1.47
